# insiderdb

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.api  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: container-image.yml
src/sec_insider_db/: __init__.py  __main__.py  app.py
src/sec_insider_db/api/: __init__.py  app.py  mcp.py  queries.py  schemas.py  settings.py
src/sec_insider_db/api/frontend/: index.html
src/sec_insider_db/api/frontend/assets/: app.js  styles.css
src/sec_insider_db/config/: __init__.py  settings.py
src/sec_insider_db/database/: __init__.py  migrations.py  models.py  session.py
src/sec_insider_db/ingestion/: __init__.py  backfill.py  bulk_dataset.py  checkpoints.py  observability.py  storage.py  updater.py
src/sec_insider_db/logging/: __init__.py  setup.py
src/sec_insider_db/migrations/: env.py
src/sec_insider_db/migrations/versions/: 20260620_0001_initial_schema.py  20260620_0002_ingestion_observability.py
src/sec_insider_db/scheduler/: __init__.py  scheduler.py
src/sec_insider_db/sec/: __init__.py  client.py  indexes.py  parser.py
src/sec_insider_db/utils/: tickers.py
src/sec_insider_db/views/: __init__.py  cluster_buys.sql  ingestion_summary.sql  manager.py
tests/: test_ingestion_observability.py  test_parser.py  test_settings.py
tests/api/: test_api_app.py
