[project]
name = "sec-insider-db"
version = "0.1.0"
description = "Self-hosted SEC Forms 3/4/5 ownership filing ingestion into PostgreSQL."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.2.0",
    "schedule>=1.2.2",
    "SQLAlchemy>=2.0.0",
    "tenacity>=9.0.0",
]

[project.scripts]
sec-insider-db = "sec_insider_db.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_insider_db"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
