[project]
name = "sec-insider-db"
version = "0.1.0"
description = "Self-hosted SEC Forms 3/4/5 ownership filing ingestion into PostgreSQL."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.138.0",
    "fastmcp>=3.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.2",
    "SQLAlchemy>=2.0.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
sec-insider-db = "sec_insider_db.app:main"
sec-insider-api = "sec_insider_db.api.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_insider_db"]

[tool.hatch.build.targets.wheel.force-include]
"src/sec_insider_db/api/frontend" = "sec_insider_db/api/frontend"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
